# metrics-utility

./: .gitignore  CHANGELOG.md  README.md  blah.py  manage.py  pyproject.toml  setup.cfg
.github/linters/: .jscpd.json
.github/workflows/: main.yml
metrics_utility/: __init__.py  base_command.py  exceptions.py  management_utility.py
metrics_utility/automation_controller_billing/: collector.py  collectors.py  csv_file_splitter.py  helpers.py  package.py  package_crc.py  package_directory.py
metrics_utility/automation_controller_billing/base/: s3_handler.py
metrics_utility/automation_controller_billing/dataframe_engine/: base.py  dataframe_content_usage.py  dataframe_jobhost_summary_usage.py  dataframe_summarized_by_host.py  dataframe_summarized_by_org_and_host.py  dataframe_summarized_by_org_and_host_v2.py  db_dataframe_host_metric.py  factory.py
metrics_utility/automation_controller_billing/extract/: extractor_controller_db.py  extractor_directory.py  extractor_s3.py  factory.py
metrics_utility/automation_controller_billing/package/: factory.py  package_crc.py  package_directory.py  package_s3.py
metrics_utility/automation_controller_billing/report/: base.py  factory.py  report_ccsp.py  report_ccsp_v2.py  report_renewal_guidance.py  report_renewal_guidance_v2.py
metrics_utility/automation_controller_billing/report_saver/: factory.py  report_saver_directory.py  report_saver_s3.py
metrics_utility/management/: validation.py
metrics_utility/management/commands/: build_report.py  gather_automation_controller_billing_data.py  host_metric.py  host_summary.py
(+2 files in other folders)
